--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,10 @@ _autosave-*
 *-save.kicad_pcb
 fp-info-cache
 
+backups
+
+Sketchbook/libraries
+
 # Netlist files (exported from Eeschema)
 *.net
 
